--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,7 +56,23 @@ body {
 .save-button {
   position: absolute;
   top: 25px;
-  right: 25px;
+  right: 185px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.update-button {
+  position: absolute;
+  top: 25px;
+  right: 100px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.delete-button {
+  position: absolute;
+  top: 25px;
+  right: 22px;
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
